--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
 <html>
+    <head>
+<!--styles-->
+        <link rel="stylesheet" href="theme-dev.css">
+        <link rel="stylesheet" href="assets/Bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/animate.css">
+<!--scripts-->
+        <script src="assets/jquery/jquery.min.js"></script>
+        <script src="assets/velocity.min.js"></script>
+        <script src="assets/Bootstrap/js/bootstrap.min.js"></script>
 
-<head>
-    <!--styles-->
-    <link rel="stylesheet" href="landing/landing.css">
-    <link rel="stylesheet" href="assets/Bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/animate.css">
-    <!--scripts-->
-    <script src="assets/jquery/jquery.min.js"></script>
-    <script src="js/main-engine.js"></script>
-<!--    <script src="assets/Bootstrap/js/bootstrap.min.js"></script>-->
-
-    <!--end-->
-    <title>BNKS TechnoQuiz 2016</title>
-</head>
+<!--end-->
+   <title>MCQ for BNKS</title>
+    </head>
 <!---------------------------------->
-
-<body>
-    <style>
-        body {
-            background: url(images/bg-4.png) no-repeat center center fixed;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            text-align: center;
-        }
-    </style>
-    <div class="abs-centered centered">
-        <div class="info-div-welcome">
-            Welcome to
-            <br><span class="bnks">BNKS</span>
-            <br>TechnoQuiz 2016
+    <body>
+        <div class="abs-centered cont">
+        <h1>Welcome to the MCQ designed by 1B* for BNKS</h1>
+            <a href="php/client.php">
+        <button type="button" class="go-button btn btn-primary">
+            Continue to the MCQ section
+        </button>
+            </a>
         </div>
-        <a href="php/client.php">
-            <button type="button" class="go-button btn btn-success">
-                Continue
-            </button>
-        </a>
-    </div>
-    <div class="sprite-welcome">
-        <img src="images/skatetocat.png" />
-    </div>
-</body>
-
+    </body>
 </html>
